--- a/src/main/resources/com/erictoader/fooddelivery/admin-control-panel.fxml
+++ b/src/main/resources/com/erictoader/fooddelivery/admin-control-panel.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -13,28 +14,41 @@
       <Pane layoutY="50.0" prefHeight="760.0" prefWidth="440.0" style="-fx-border-color: #000000;">
          <children>
             <Label layoutX="10.0" layoutY="740.0" text="Food Delivery Management System v0 by Eric Toader" />
-            <Label layoutX="128.0" layoutY="66.0" text="Admin Control Panel">
+            <Label layoutX="128.0" layoutY="36.0" text="Admin Control Panel">
                <font>
                   <Font size="22.0" />
                </font>
             </Label>
-            <Button fx:id="btn_populate_with_file" layoutX="135.0" layoutY="150.0" mnemonicParsing="false" onAction="#populateMenuFromFile" prefHeight="52.0" prefWidth="179.0" text="Populate menu using file" />
-            <Button fx:id="btn_add_menu_item" layoutX="135.0" layoutY="531.0" mnemonicParsing="false" onAction="#addMenuItem" prefHeight="52.0" prefWidth="179.0" text="Add menu item" />
-            <Button fx:id="btn_update_menu_item" layoutX="135.0" layoutY="591.0" mnemonicParsing="false" onAction="#updateMenuItem" prefHeight="52.0" prefWidth="179.0" text="Update menu item" />
-            <Button fx:id="btn_delete_menu_item" layoutX="135.0" layoutY="651.0" mnemonicParsing="false" onAction="#deleteMenuItem" prefHeight="52.0" prefWidth="179.0" text="Remove menu item" />
+            <Button fx:id="btn_populate_with_file" defaultButton="true" layoutX="25.0" layoutY="90.0" mnemonicParsing="false" onAction="#populateMenuFromFile" prefHeight="52.0" prefWidth="179.0" text="Populate menu using file" />
+            <Button fx:id="btn_add_menu_item" layoutX="25.0" layoutY="155.0" mnemonicParsing="false" onAction="#addMenuItem" prefHeight="52.0" prefWidth="179.0" text="Add base product" />
+            <Button fx:id="btn_update_menu_item" layoutX="25.0" layoutY="221.0" mnemonicParsing="false" onAction="#updateMenuItem" prefHeight="52.0" prefWidth="179.0" text="Update menu item" />
+            <Button fx:id="btn_delete_menu_item" layoutX="235.0" layoutY="221.0" mnemonicParsing="false" onAction="#deleteMenuItem" prefHeight="52.0" prefWidth="179.0" text="Remove menu item" />
+            <TableView fx:id="tv_compBuilder" layoutX="26.0" layoutY="327.0" prefHeight="259.0" prefWidth="391.0">
+              <columns>
+                <TableColumn fx:id="tc_compBuilder_title" prefWidth="392.9999828338623" text="Title" />
+              </columns>
+            </TableView>
+            <TextField fx:id="tf_compName" layoutX="26.0" layoutY="612.0" prefWidth="179.0" />
+            <TextField fx:id="tf_compPrice" layoutX="26.0" layoutY="659.0" prefWidth="179.0" />
+            <Button fx:id="btn_add_comp_product" layoutX="235.0" layoutY="616.0" mnemonicParsing="false" onAction="#addCompProduct" prefHeight="59.0" prefWidth="179.0" text="Add composite product" />
+            <Button fx:id="btn_reports" defaultButton="true" layoutX="235.0" layoutY="90.0" mnemonicParsing="false" onAction="#reports" prefHeight="52.0" prefWidth="179.0" text="Generate report" />
+            <Button fx:id="btn_add_to_comp_builder" layoutX="235.0" layoutY="155.0" mnemonicParsing="false" onAction="#addToCompBuilder" prefHeight="52.0" prefWidth="179.0" text="Add to composite builder" />
+            <Label fx:id="label_compName" layoutX="28.0" layoutY="594.0" text="Composite product name:" />
+            <Label fx:id="label_compPrice" layoutX="27.0" layoutY="643.0" text="Composite product price:" />
          </children>
       </Pane>
-      <Pane layoutX="440.0" prefHeight="810.0" prefWidth="1000.0" style="-fx-border-color: #000000;">
+      <Pane layoutX="440.0" layoutY="50.0" prefHeight="760.0" prefWidth="1000.0" style="-fx-border-color: #000000;">
          <children>
-            <TableView fx:id="tv_menutable" layoutX="1.0" layoutY="1.0" prefHeight="808.0" prefWidth="998.0">
+            <TableView fx:id="tv_menutable" layoutX="1.0" layoutY="1.0" prefHeight="758.0" prefWidth="998.0">
               <columns>
                 <TableColumn fx:id="tc_title" prefWidth="269.38177490234375" text="Title" />
-                <TableColumn fx:id="tc_rating" minWidth="0.0" prefWidth="93.6182861328125" text="Rating" />
-                  <TableColumn fx:id="tc_calories" minWidth="0.0" prefWidth="116.61517333984375" text="Calories" />
-                  <TableColumn fx:id="tc_protein" prefWidth="130.4259033203125" text="Protein" />
-                  <TableColumn fx:id="tc_fat" prefWidth="125.62432861328125" text="Fat" />
-                  <TableColumn fx:id="tc_sodium" prefWidth="130.124267578125" text="Sodium" />
-                  <TableColumn fx:id="tc_price" prefWidth="138.3135986328125" text="Price" />
+                <TableColumn fx:id="tc_rating" minWidth="0.0" prefWidth="67.8409423828125" text="Rating" />
+                  <TableColumn fx:id="tc_calories" minWidth="0.0" prefWidth="59.6590576171875" text="Calories" />
+                  <TableColumn fx:id="tc_protein" prefWidth="60.89544677734375" text="Protein" />
+                  <TableColumn fx:id="tc_fat" prefWidth="43.96124267578125" text="Fat" />
+                  <TableColumn fx:id="tc_sodium" prefWidth="59.7635498046875" text="Sodium" />
+                  <TableColumn fx:id="tc_price" prefWidth="81.422607421875" text="Price" />
+                  <TableColumn fx:id="tc_contains" prefWidth="357.988525390625" text="Contains" />
               </columns>
             </TableView>
          </children>
@@ -54,5 +68,13 @@
             </Label>
          </children>
       </Pane>
+      <Pane layoutX="440.0" prefHeight="50.0" prefWidth="1000.0" style="-fx-border-color: #000000;" />
+      <Label layoutX="464.0" layoutY="16.0" text="Search by Title:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="tf_search_by_title" layoutX="564.0" layoutY="13.0" onAction="#searchByTitle" prefHeight="26.0" prefWidth="276.0" />
+      <Button layoutX="840.0" layoutY="13.0" mnemonicParsing="false" onAction="#searchByTitle" prefHeight="26.0" prefWidth="35.0" text=" 🔍" />
    </children>
 </AnchorPane>
