--- a/src/main/resources/com/erictoader/fooddelivery/employee-panel.fxml
+++ b/src/main/resources/com/erictoader/fooddelivery/employee-panel.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.erictoader.fooddelivery.EmployeeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.erictoader.fooddelivery.EmployeePanelController">
     <children>
         <Pane layoutY="50.0" prefHeight="760.0" prefWidth="440.0" style="-fx-border-color: #000000;">
             <children>
-                <Label layoutX="10.0" layoutY="740.0" text="Food Delivery Management System v0 by Eric Toader" />
+                <Label layoutX="10.0" layoutY="740.0" text="Food Delivery Management System v1.0 by Eric Toader" />
                 <Label layoutX="108.0" layoutY="236.0" text="Employee Control Panel">
                     <font>
                         <Font size="22.0" />
